# screensaver.kmscube

./: CMakeLists.txt  cube-smooth.c  kmscube.cpp  kmscube.h
screensaver.kmscube/: addon.xml.in
